--- a/nativedialogs.html
+++ b/nativedialogs.html
@@ -27,7 +27,7 @@
 </head>
 
 <body>
-	<h1>Native Dialogs</h1>
+	<h2>Native Dialogs</h2>
 	<button id="alert">Alert</button>
 	<button id="confirm">Confirm</button>
 	<button id="prompt">Prompt</button>
@@ -36,13 +36,15 @@
 	<br>
 	<br>
 
+	<h2>Custom Dialogs</h2>
 	<button id="customAlert">Custom Alert</button>
 	<button id="customConfirm">Custom Confirm</button>
 	<button id="customPrompt">Custom Prompt</button>
 
 	<br>
+	<br>
 
-	<output id="output"></output>
+	<output id="output" style="border: 2px black solid; width: 500px; height: 500px; display: inline-block;"></output>
 
 	<dialog></dialog>
 
