--- a/index.html
+++ b/index.html
@@ -63,18 +63,6 @@
 			animation: rainbow 10s infinite alternate linear;
 		}
 
-		a.pagelink {
-			background: var(--site-dark-grey);
-			display: inline-block;
-			margin: 10px;
-			padding: 10px 20px;
-			border-radius: 25px;
-		}
-
-		a.pagelink:hover {
-			color: var(--site-grey);
-		}
-
 
 
 		@media screen and (min-width: 800px) {
@@ -242,6 +230,15 @@
 
 			</pre>
 	</footer>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DCS98147C4"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-DCS98147C4');
+	</script>
 </body>
 
 </html>
