--- a/resume.html
+++ b/resume.html
@@ -44,6 +44,15 @@
 
 			</pre>
 	</footer>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-DCS98147C4"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-DCS98147C4');
+	</script>
 </body>
 
 </html>
