--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 			<ul>
 				<li><a aria-label="active page" href="index.html">Home</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li><a href="experiments.html">Experiments</a></li>
+				<li><a href="blog.html">Blog</a></li>
 				<li><a href="academics.html">Academics</a></li>
 				<li><a href="resume.html">Resume</a></li>
 			</ul>
@@ -183,6 +183,14 @@
 		</section>
 		<section id="workExperience">
 			<h2>Work Experience</h2>
+			<div>
+				<h3>Netflix New Grad</h3>
+				<i>Summer 2023</i>
+				<p>
+					After graduation, I will be joining Netflix as a Software Engineer!!!
+				</p>
+			</div>
+			<hr>
 			<div>
 				<h3>Google SWE Intern</h3>
 				<i>Summer 2022</i>
