--- a/academics.html
+++ b/academics.html
@@ -51,7 +51,7 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li><a href="experiments.html">Experiments</a></li>
+				<li><a href="blog.html">Blog</a></li>
 				<li><a aria-label="active page" href="academics.html">Academics</a></li>
 				<li><a href="resume.html">Resume</a></li>
 			</ul>
