--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,7 @@
 	</script>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Marlon Trujillo's resume.">
+	<meta name="description" content="Marlon Trujillo's html experiments.">
 	<title>Marlon's Portfolio</title>
 	<link rel="icon" href="favicon.ico">
 	<link rel="stylesheet" href="styling/main.css">
@@ -31,16 +31,15 @@
 			<ul>
 				<li><a href="index.html">Home</a></li>
 				<li><a href="projects.html">Projects</a></li>
-				<li><a href="blog.html">Blog</a></li>
+				<li><a aria-label="active page" href="blog.html">Blog</a></li>
 				<li><a href="academics.html">Academics</a></li>
-				<li><a aria-label="active page" href="resume.html">Resume</a></li>
+				<li><a href="resume.html">Resume</a></li>
 			</ul>
 		</nav>
 	</header>
 	<main>
-		<h1>My Resume</h1>
-		<iframe title="Resume" src="https://drive.google.com/file/d/12x6ptijgAbrpJ9rVH0tpZKq0RMtwujC0/preview"
-			width="640" height="880"></iframe>
+		<h1>Blog</h1>
+		<p>Under Construction. Coming Soon....</p>
 	</main>
 	<footer>
 		<p>Site developed for CSE 134B</p>
