--- a/index.html
+++ b/index.html
@@ -18,81 +18,7 @@
 	<title>Marlon's Portfolio</title>
 	<link rel="icon" href="assets/favicon.ico">
 	<link rel="stylesheet" href="styling/main.css">
-	<style>
-		main {
-			gap: 200px;
-		}
-
-		aside {
-			position: fixed;
-			bottom: 1rem;
-			left: 1rem;
-		}
-
-		aside nav ol {
-			list-style: none;
-			line-height: 2rem;
-		}
-
-		aside nav ol li a {
-			text-decoration: none;
-			color: var(--site-grey);
-			transition: var(--transition-delay);
-			background: transparent;
-		}
-
-		aside nav ol li a:hover {
-			text-decoration: none;
-			color: white;
-			font-size: 1.5em;
-		}
-
-		#aboutMe img {
-			border-radius: 50%;
-		}
-
-		svg {
-			fill: white;
-			transition: var(--transition-delay);
-		}
-
-		svg:hover {
-			fill: var(--site-grey);
-			transform: scale(1.2);
-		}
-
-		#socials ul {
-			display: flex;
-			justify-content: space-around;
-			align-items: center;
-			padding: 20px 0;
-		}
-
-		h1 {
-			animation: rainbow 10s infinite alternate linear;
-		}
-
-
-
-		@media screen and (min-width: 800px) {
-			#aboutMe {
-				display: flex;
-				justify-content: space-around;
-				text-align: left;
-				align-items: center;
-			}
-
-			#aboutMe div {
-				max-width: 400px;
-			}
-		}
-
-		@media screen and (max-width: 1300px) {
-			aside {
-				display: none;
-			}
-		}
-	</style>
+	<link rel="stylesheet" href="styling/index.css">
 </head>
 
 <body>
@@ -156,7 +82,8 @@
 			<h3>Socials</h3>
 			<ul>
 				<li>
-					<a href="https://www.github.com/mtrujilloariza" title="Marlon's Github">
+					<a href="https://www.github.com/mtrujilloariza" title="Marlon's Github" target="_blank"
+						rel="noopener">
 						<svg width="50" height="50" viewBox="0 0 24 24">
 							<path
 								d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z" />
@@ -164,7 +91,8 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://www.linkedin.com/in/marlontrujilloariza" title="Marlon's Linkedin">
+					<a href="https://www.linkedin.com/in/marlontrujilloariza" title="Marlon's Linkedin" target="_blank"
+						rel="noopener">
 						<svg width="50" height="50" viewBox="0 0 24 24">
 							<path
 								d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z" />
@@ -172,10 +100,19 @@
 					</a>
 				</li>
 				<li>
-					<a href="https://twitter.com/MarMarMink" title="Marlon's Twitter">
+					<a href="https://twitter.com/MarMarMink" title="Marlon's Twitter" target="_blank" rel="noopener">
 						<svg width="50" height="50" viewBox="0 0 24 24">
 							<path
 								d="M24 4.557c-.883.392-1.832.656-2.828.775 1.017-.609 1.798-1.574 2.165-2.724-.951.564-2.005.974-3.127 1.195-.897-.957-2.178-1.555-3.594-1.555-3.179 0-5.515 2.966-4.797 6.045-4.091-.205-7.719-2.165-10.148-5.144-1.29 2.213-.669 5.108 1.523 6.574-.806-.026-1.566-.247-2.229-.616-.054 2.281 1.581 4.415 3.949 4.89-.693.188-1.452.232-2.224.084.626 1.956 2.444 3.379 4.6 3.419-2.07 1.623-4.678 2.348-7.29 2.04 2.179 1.397 4.768 2.212 7.548 2.212 9.142 0 14.307-7.721 13.995-14.646.962-.695 1.797-1.562 2.457-2.549z" />
+						</svg>
+					</a>
+				</li>
+				<li>
+					<a href="https://leetcode.com/mtrujilloariza/" title="Marlon's Leetcode" target="_blank"
+						rel="noopener">
+						<svg width="50" height="50" viewBox="0 0 32 32">
+							<path
+								d="M21.469 23.907l-3.595 3.473c-0.624 0.625-1.484 0.885-2.432 0.885s-1.807-0.26-2.432-0.885l-5.776-5.812c-0.62-0.625-0.937-1.537-0.937-2.485 0-0.952 0.317-1.812 0.937-2.432l5.76-5.844c0.62-0.619 1.5-0.859 2.448-0.859s1.808 0.26 2.432 0.885l3.595 3.473c0.687 0.688 1.823 0.663 2.536-0.052 0.708-0.713 0.735-1.848 0.047-2.536l-3.473-3.511c-0.901-0.891-2.032-1.505-3.261-1.787l3.287-3.333c0.688-0.687 0.667-1.823-0.047-2.536s-1.849-0.735-2.536-0.052l-13.469 13.469c-1.307 1.312-1.989 3.113-1.989 5.113 0 1.996 0.683 3.86 1.989 5.168l5.797 5.812c1.307 1.307 3.115 1.937 5.115 1.937 1.995 0 3.801-0.683 5.109-1.989l3.479-3.521c0.688-0.683 0.661-1.817-0.052-2.531s-1.849-0.74-2.531-0.052zM27.749 17.349h-13.531c-0.932 0-1.692 0.801-1.692 1.791 0 0.991 0.76 1.797 1.692 1.797h13.531c0.933 0 1.693-0.807 1.693-1.797 0-0.989-0.76-1.791-1.693-1.791z" />
 						</svg>
 					</a>
 				</li>
