--- a/crud.html
+++ b/crud.html
@@ -67,7 +67,7 @@
 		</div>
 	</main>
 
-	<script src="/post.js" type="module"></script>
+	<script src="/blog.js" type="module"></script>
 </body>
 
 </html>
