--- a/styledcrud.html
+++ b/styledcrud.html
@@ -40,8 +40,10 @@
 
 	<template id="confirmTemplate">
 		<p></p>
-		<button id="cancel">Cancel</button>
-		<button id="confirm">Confirm</button>
+		<div class="buttonDiv">
+			<button id="cancel">Cancel</button>
+			<button id="confirm">Confirm</button>
+		</div>
 	</template>
 
 	<template id="updateFormTemplate">
